# cpp-linter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  action.yml  build.sh  debug_env.sh  entrypoint.sh  exe  package.sh  t.cpp  test_exe.cpp
.github/workflows/: build_and_test_on_buntu_2404.yml  build_and_test_on_ubuntu_2404.yml  main.yml  manually_packaging_and_release_for_ubuntu.yml  packaging_and_release_for_ubuntu.yml  release_for_ubuntu_2404.yml  release_on_ubuntu2404.yml  release_on_ubuntu_2404.yml  test_action.yml
cmake/: FetchCatch2.cmake  FetchHttpLib.cmake  FetchLibGit2.cmake  FetchMagicEnum.cmake  FetchNlohmannJson.cmake  FetchRangeV3.cmake  FetchSpdlog.cmake  FetchTinyXML2.cmake
docs/: TODO.md  supports.md
scripts/linux/: install_lddtree.sh  install_patchelf.sh
scripts/linux/ubuntu/: install.sh  install_lddtree.sh  install_patchelf.sh  package.sh  uninstall.sh
scripts/linux/ubuntu/x64/distribute/with_compiler/: package.sh  uninstall.sh
scripts/linux/ubuntu/x64/manual_distribution/with_compiler/: install.sh  package.sh
scripts/linux/ubuntu/x64/manual_distribution/without_compiler/: install.sh  package.sh  uninstall.sh
scripts/linux/ubuntu/x64/utils/: filter_files.sh
scripts/ubuntu/: build_on_arm_2404.sh  package.sh
src/: clang_tidy_notifation.h  comments.json  comments2.json  context.cpp  context.h  debug.json  main.cpp  patcher.h  program_options.cpp  program_options.h  result.cpp  result.h  run_clang_tidy.cpp  tool_result.h
src/configs/: version.h.in
src/github/: api.cpp  api.h  client.h  common.cpp  common.h  github.h  review_comment.cpp  review_comment.h  utils.cpp  utils.h
src/tools/: base_creator.h  base_option.h  base_reporter.cpp  base_reporter.h  base_result.h  base_tool.cpp  base_tool.h  clang_format.cpp  clang_format.h  clang_tidy.cpp  clang_tidy.h  deprecated_clang_tidy.cpp  run_clang_tidy.cpp  util.h
src/tools/clang_format/: base.cpp  base.h  base_impl.cpp  base_impl.h  clang_format.cpp  clang_format.h  creator.cpp  creator.h  reporter.h  v18.h  version_18.h
src/tools/clang_format/general/: impl.cpp  impl.h  option.cpp  option.h  reporter.h  result.h
src/tools/clang_format/version/: v18.h
src/tools/clang_tidy/: base.cpp  base.h  base_impl.cpp  base_impl.h  clang_tidy.cpp  clang_tidy.h  creator.cpp  creator.h  reporter.h  version_18.h
src/tools/clang_tidy/general/: impl.cpp  impl.h  option.cpp  option.h  reporter.h  result.h
src/tools/clang_tidy/version/: v18.h
src/utils/: common.h  context.cpp  context.h  env_manager.cpp  env_manager.h  error.h  git_error.h  git_utils.cpp  git_utils.h  platform.h  program_options.cpp  program_options.h  shell.cpp  shell.h  std.h  system_command.cpp  system_command.h  util.h
tests/: .clang-tidy  CMakeLists.txt  test_base_reporter.cpp  test_clang_format.cpp  test_clang_tidy.cpp  test_common.cpp  test_common.h  test_git.cpp  test_main.cpp  test_program_options.cpp
tests/clang_format/: test_clang_format_general.cpp
